Migrate test code to Java 25 Syntax
Rewrite Rules applied