@@ -20,7 +20,7 @@ class UaaClientTest {
         UaaClient c = new UaaClient("cid", "sec", List.of(new SimpleGrantedAuthority("uaa.none")), addl, null);
         ClientJwtConfiguration j = c.getClientJwtConfiguration();
         assertThat(j.getClientJwtCredentials()).isNotNull().hasSize(1);
-        assertThat(j.getClientJwtCredentials().get(0).getIssuer()).isEqualTo("http://localhost/uaa/oauth/token");
+        assertThat(j.getClientJwtCredentials().getFirst().getIssuer()).isEqualTo("http://localhost/uaa/oauth/token");
     }
 
     @Test
